Fix: prevent empty rows collapsing

--- a/SolverZeroUI/wwwroot/css/site.css
+++ b/SolverZeroUI/wwwroot/css/site.css
@@ -18,7 +18,9 @@ div.sudoku {
         }
 
         div.sudoku table tr td {
-            padding: 0px 4px 0px 4px;
+            height: 1em;
+            text-align: center;
+            width: 1.2em;
         }
 
             div.sudoku table tr td:nth-child(3n) {
